bases/data/snowboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snowboard
  name: snowboard
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: snowboard
  sessionAffinity: None
  type: ClusterIP
