bases/data/snowboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: snowboard.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: snowboard.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snowboard
                port:
                  number: 80
  tls:
    - hosts:
        - snowboard.${cluster_name}.${cluster_location}.bink.sh
